--- a/src/main/webapp/inward/inward_bill_outside_charge.xhtml
+++ b/src/main/webapp/inward/inward_bill_outside_charge.xhtml
@@ -20,6 +20,7 @@
                         <p:defaultCommand target="btnAdd"/>
 
                         <p:commandButton value="Clear" ajax="false" action="#{inwardAdditionalChargeController.makeNull}" onclick="onSubmitButton();"/>
+                        <p:commandButton value="Go To Add Service" ajax="false" action="/inward/inward_bill_service" onclick="onSubmitButton();"/>
                     </f:facet>
                     <h:panelGrid columns="2">
                         <p:panel header="BHT">
