--- a/src/main/webapp/admin_speciality.xhtml
+++ b/src/main/webapp/admin_speciality.xhtml
@@ -53,7 +53,7 @@
                                     <h:outputText id="lblName" value="Speciality Name" ></h:outputText>
                                     <h:inputText autocomplete="off" id="txtName" value="#{specialityController.current.name}"  ></h:inputText>
                                     <h:outputText id="lblDescription" value="Income Name" ></h:outputText>
-                                    <h:inputText autocomplete="off" id="txtDescription" value="#{specialityController.current.description}"  ></h:inputText>
+                                    <h:inputTextarea id="txtDescription" value="#{specialityController.current.description}" />
                                 </h:panelGrid>
                                 <h:panelGrid id="gpDetailButtons" columns="2">
                                     <h:commandButton id="btnSave" value="Save" action="#{specialityController.saveSelected()}" styleClass="buttons">
