--- a/src/main/webapp/channel/channel_report_specility_month_count.xhtml
+++ b/src/main/webapp/channel/channel_report_specility_month_count.xhtml
@@ -53,7 +53,10 @@
                         </h:panelGroup>
                         <p:commandButton ajax="false" value="Print" styleClass="noPrintButton">
                             <p:printer target="reportPrint"  />
-                        </p:commandButton> 
+                        </p:commandButton>
+                        <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" onclick="onSubmitButton();" >
+                            <pe:exporter type="xlsx" target="tbl1" fileName="Speciality_wise_Channel_Appointment_count" subTable="true" />
+                        </p:commandButton>
                     </h:panelGrid>
                 </p:panel>
                 <p:panel id="reportPrint" styleClass="noBorder summeryBorder">
